# CadForge

./: .gitignore  CADFORGE.md  README.md  package-lock.json  package.json  pyproject.toml
.cadforge/: settings.json
engine/: pyproject.toml
engine/src/cadforge_engine/: __init__.py  app.py  server.py
engine/src/cadforge_engine/agent/: cad_agent.py  competitive.py  competitive_graph.py  llm.py  pipeline.py
engine/src/cadforge_engine/domain/: analyzer.py  exporter.py  renderer.py  sandbox.py  viewer.py
engine/src/cadforge_engine/middleware/: auth.py
engine/src/cadforge_engine/models/: competitive.py  designs.py  requests.py  responses.py  tasks.py
engine/src/cadforge_engine/routes/: cadquery.py  competitive.py  designs.py  export.py  health.py  mesh.py  pipeline.py  render.py  subagent.py  tasks.py  vault.py
engine/src/cadforge_engine/vault/: chunker.py  indexer.py  learnings.py  scraper.py  search.py
engine/tests/: test_analyzer.py  test_cadquery_route.py  test_competitive.py  test_designs.py  test_health.py  test_litellm_client.py  test_mesh_route.py  test_pipeline.py  test_renderer.py  test_sandbox_build123d.py  test_scraper.py  test_subagent_route.py  test_tasks.py  test_vault_routes.py
src/cadforge/: __init__.py  __main__.py  cli.py  config.py
src/cadforge/cad/: analyzer.py  exporter.py
src/cadforge/chat/: modes.py  prompt_bar.py  renderer.py  repl.py
src/cadforge/core/: agent.py  auth.py  context.py  events.py  hooks.py  llm.py  memory.py  permissions.py  session.py  session_vault.py  subagent.py  subagent_executor.py
src/cadforge/skills/: loader.py
src/cadforge/skills/builtin/commit/: SKILL.md
src/cadforge/skills/builtin/dfm-check/: SKILL.md
src/cadforge/skills/builtin/review/: SKILL.md
src/cadforge/tools/: bash_tool.py  cadquery_tool.py  executor.py  file_tool.py  mesh_tool.py  project_tool.py  registry.py  task_tool.py  vault_tool.py  viewer_tool.py
src/cadforge/utils/: paths.py
src/cadforge/vault/: chunker.py  indexer.py  schema.py  search.py
src/cadforge/viewer/: pyvista_viewer.py
tests/: conftest.py  test_agent.py  test_auth.py  test_cadquery_executor.py  test_cadquery_tool.py  test_config.py  test_exporter.py  test_hooks.py  test_llm.py  test_memory.py  test_mesh.py  test_modes.py  test_permissions.py  test_prompt_bar.py  test_session.py  test_session_vault.py  test_skills.py  test_subagent.py  test_tools.py  test_vault.py
vault/build123d/: assemblies.md  boolean-ops.md  primitives.md  sketches.md
vault/cadquery/: boolean-ops.md  performance.md  primitives.md
vault/design-rules/: overhangs.md  tolerances.md  wall-thickness.md
vault/materials/: ABS.md  PETG.md  PLA.md
vault/patterns/: press-fits.md  snap-fits.md  threads.md
vault/printers/: bambu-a1.md  bambu-x1c.md  custom-template.md  ender-3-v3.md  prusa-mk4.md  voron-2.4.md
