[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadforge"
version = "0.1.0"
description = "AI-powered CLI CAD tool for 3D printing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.40.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.2",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# CadQuery requires cadquery-ocp (OpenCascade C++ bindings) which only has
# wheels for Python <=3.12. Use conda for Python 3.13+:
#   conda install -c cadquery cadquery
cad = [
    "cadquery>=2.4.0",
]
mesh = [
    "trimesh>=3.20.0",
]
rag = [
    "lancedb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pyarrow>=14.0.0",
]
viewer = [
    "pyvista>=0.43.0",
]
# Everything that works on all Python versions (excludes cadquery)
full = [
    "cadforge[mesh,rag,viewer]",
]
# Everything including cadquery (requires Python <=3.12 or conda)
all = [
    "cadforge[cad,mesh,rag,viewer]",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21",
]

[project.scripts]
cadforge = "cadforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
